--- a/packages/subproviders/package.json
+++ b/packages/subproviders/package.json
@@ -19,12 +19,14 @@
     },
     "dependencies": {
         "@0xproject/assert": "^0.0.20",
+        "@0xproject/deployer": "^0.1.0",
         "@0xproject/types": "^0.2.3",
         "@0xproject/utils": "^0.3.4",
         "bn.js": "^4.11.8",
         "es6-promisify": "^5.0.0",
         "ethereumjs-tx": "^1.3.3",
         "ethereumjs-util": "^5.1.1",
+        "ganache-core": "/Users/leonidlogvinov/Dev/0x/ganache-core",
         "hdkey": "^0.7.1",
         "ledgerco": "0xProject/ledger-node-js-api",
         "lodash": "^4.17.4",
@@ -44,6 +46,7 @@
         "chai-as-promised-typescript-typings": "^0.0.9",
         "chai-typescript-typings": "^0.0.3",
         "dirty-chai": "^2.0.1",
+        "ganache-core": "file:../../../ganache-core",
         "mocha": "^4.0.1",
         "npm-run-all": "^4.1.2",
         "shx": "^0.2.2",
